# mips_r2000

./: CMakeLists.txt  README.md
docs/: general_purpose_registers.md  instruction_masks.sv  instruction_types.md  instructions_by_bits.md  registers.sv
misc/: compile.sh  sample.c
misc/bubble_sort/: Makefile  main.c  r2000.ld
misc/bubble_sort_demo/: Makefile  bubble_sort_demo.c  r2000.ld  start.s
src/: bubble_sort_demo.sv  bubble_sort_demo.xdc  constants.sv  decode.sv  execute.sv  fetch.sv  memory.sv  mips_r2000.sv
tb/: bubble_sort.cpp  bubble_sort_demo.cpp  decode.cpp  execute.cpp  fetch.cpp  memory.cpp  mips_r2000.cpp  util.hpp  writeback.cpp
